# aiida-upgrade

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
aiida_upgrade/: __init__.py  __main__.py  entry_points.py  methods.py  migrate.py
tests/: test_entry_points.py  test_methods.py
